syntax = "proto3";

package Calculator;

option csharp_namespace = "GrpcPrimeFactorsProtobuf";

message PrimesRequest {
    int32 Number = 1;
}

message PrimesResponse {
    int32 Result = 1;
}
