syntax = "proto3";

package Calculator;

option csharp_namespace = "GrpcSumProtobuf";

message SumRequest {
    int32 FirstNumber = 1;
    int32 SecondNumber = 2;
}

message SumResponse {
    int32 Result = 1;
}
